--- a/set_images/set_images.html
+++ b/set_images/set_images.html
@@ -29,7 +29,7 @@
     <script src="https://npmcdn.com/aframe-event-set-component@3.0.1"></script>
     <script src="https://npmcdn.com/aframe-layout-component@4.2"></script>
     <script src="https://npmcdn.com/aframe-template-component@3.1.1"></script>
-    <script src="https://www.dropbox.com/s/76o5101v3rrj8m0/set-image.js?raw=1"></script>
+    <script src="https://rawgit.com/vjjv/WebVR/master/set_images/js/set-image.js"></script>
   </head>
   <a-scene cursor="rayOrigin: mouse">
     <a-assets>
@@ -70,7 +70,7 @@
     </a-entity>
     <!--  Camera + cursor.  -->
     <a-entity camera="" look-controls="">
-      
+
     </a-entity>
   </a-scene>
 </body>
